# expert-lab-prototypes-RhysDevalckeneer

./: README.md
portfolio/src/: index.css
portfolio/src/components/Layout/: Footer.js  Header.js  Nav.js
portfolio/src/pages/: Homepage.js  Projects.js
week1/go-expert/first-try/: main  main.go
week1/go-expert/first-try/static/: index.html
week1/go-expert/web-scraper/: go.sum  scraper.go
week1/rust-expert/: Cargo.toml
week1/rust-expert/web-scraper/: Cargo.toml
week1/rust-expert/web-scraper/src/: main.rs
week2/parkin-dashboard/: README.md  angular.json  karma.conf.js  package.json
week2/parkin-dashboard/src/: index.html  styles.scss
week2/parkin-dashboard/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
week3/movie-rn/: App.js  app.json  package-lock.json  package.json
week3/movie-rn/src/screens/: FavoritesScreen.js  SearchScreen.js
week4/map-rn/: App.js  app.json  package.json
week4/movievue/: app.json  package-lock.json  package.json
week5/movie-app/: app.json  package-lock.json  package.json
week5/onboarding-rn/: app.json
zit1/portfolio/: package-lock.json
zit1/portfolio/src/: App.js
zit1/week2/parkin-dashboard/: package-lock.json
zit1/week3/movie-rn/: App.js
zit1/week4/map-rn/: package-lock.json
zit1/week5/movie-app/: App.tsx
zit1/week5/onboarding-rn/: App.js  package-lock.json  package.json
zit2/Forgotify/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json
zit2/GamesFinder/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json
(+76 files in other folders)
