[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.59", feature = "derive" }
reqwest = { version ="0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
yew = "0.19"
